change the way we handle the max incoming connections
Signed-off-by: stefan.pingel@consensys.net <stefan.pingel@consensys.net>